--- a/contents/footer.css
+++ b/contents/footer.css
@@ -16,3 +16,12 @@
 .footcop , .footown {
     margin: 0px 25px 0px 25px ;
 }
+
+@media only screen and (max-width: 360) {
+    /* For desktop: */
+    .footer .footcop, .footown{
+      font-size:10px;
+      width: fit-content;
+    }
+    
+  }
