--- a/contents/main.css
+++ b/contents/main.css
@@ -11,7 +11,16 @@
     /*background-color: rgb(165, 182, 127);*/
     
 }
-
+@media only screen and (max-width: 803px) {
+    /* For desktop: */
+    .about .about-text{
+      font-size:12px;
+      font-style: italic;
+    }
+    .about-text .caption{
+        text-align:left;
+    }
+  }
 @media only screen and (max-width: 900px) {
     .services {
       display: none;
