--- a/pages/portfolio.css
+++ b/pages/portfolio.css
@@ -1,6 +1,7 @@
 .portfolio{
   height: 138vh;
   width: 100%;
+
 }
 .box-img {
   height: 300px;
@@ -18,9 +19,58 @@
 }
 .container-1, .container-2{
   display : flex;
+  flex-wrap: wrap;
+  row-gap: 1rem;
+  column-gap:1rem;
   justify-content: space-evenly;
   padding: 0px 20px 0px 20px;
 }
+@media only screen and (max-width: 1072px) {
+  /* For desktop: */
+  .portfolio{
+    height: fit-content;
+    width: 100%;
+  }
+}
+/* For Desktop with small screen: */
+@media only screen and (min-width: 468px) {
+  /* For desktop: */
+  #carouselExampleIndicators {  
+    width: 100%;
+    height: 80vh;
+  }
+  .navbar{
+    display :flex;
+    flex-direction: column;
+  }
+  
+  .res-navbar{
+    display: none;
+  }
+ 
+  nav {
+    margin: 0 auto;
+    display: flex;
+}
+
+.menu {
+    margin-top:20px;
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    font-size: 15px bold;
+    }
+}
+
+/* For mobile: */
+@media only screen and (max-width: 468px) {
+  /* For desktop: */
+  .menu{
+    display : none;
+  }
+}
+
+
 .span-title{
   font-size: 1.2em;
   font-weight: bold;
