--- a/style.css
+++ b/style.css
@@ -4,9 +4,37 @@
     padding: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
-
+img,
+	table,
+	td,
+	blockquote,
+	code,
+	pre,
+	textarea,
+	input,
+	iframe,
+	object,
+	embed,
+	video {
+		max-width: 100%;
+	}
+  textarea,
+	table,
+	td,
+	th,
+	code,
+	pre,
+	samp {
+		-webkit-hyphens: auto; /* césure propre */
+		-moz-hyphens: auto;
+		hyphens: auto;
+		word-wrap: break-word; /* passage à la ligne forcé */
+	}
 
 .body {
+  width: auto;
+  margin: 0;
+  padding: 0;
     background-color: rgb(248, 247, 246);
 }
 /* HEADER */
@@ -21,8 +49,42 @@
 .d-block{
     object-fit: cover;
 }
-/* MAIN */
 
+/* For Desktop with small screen: */
+@media only screen and (min-width: 468px) {
+  /* For desktop: */
+  #carouselExampleIndicators {  
+    width: 100%;
+    height: 80vh;
+  }
+  .navbar{
+    display :flex;
+    flex-direction: column;
+  }
+  
+  .res-navbar{
+    display: none;
+  }
+ 
+  nav {
+    margin: 0 auto;
+    display: flex;
+}
 
-/* FOOTER */
+.menu {
+    margin-top:20px;
+    display: flex;
+    justify-content: space-between;
+    width: 500px;
+    font-size: 15px bold;
+    }
+}
+
+/* For mobile: */
+@media only screen and (max-width: 468px) {
+  /* For desktop: */
+  .menu{
+    display : none;
+  }
+}
 
